# llm_security

./: .env.example  .gitignore  README.md  project_config.example.json  pyproject.toml
examples/vulnerable/: bof.c  integer_overflow.c  null_deref.c  uaf.c
src/ai_vuln_analyzer/: cli.py  config.py
src/ai_vuln_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_vuln_analyzer/agents/: base.py  bof_oob_agent.py  integer_agent.py  manager.py  null_uninit_agent.py  planner.py  semantic_agents.py  student.py  teacher.py  uaf_df_agent.py  verifier.py
src/ai_vuln_analyzer/analysis/: ast_analyzer.py  cfg_analyzer.py  dangerous_api.py  file_collector.py  program_flow.py  semantic_flow.py
src/ai_vuln_analyzer/core/: context.py  pipeline.py  report.py  schemas.py
src/ai_vuln_analyzer/evaluation/: __init__.py  evaluator.py
src/ai_vuln_analyzer/llm/: anthropic_client.py  base.py  mock_client.py  openai_client.py  prompts.py  resilient_client.py
src/ai_vuln_analyzer/output/: json_writer.py  markdown_writer.py
src/ai_vuln_analyzer/verifier/: confidence.py  integrated_patch.py  loop_controller.py  patch_checker.py  real_patch.py
src/ai_vuln_analyzer/web/: app.py
tests/: test_agents_mock.py  test_ast_analyzer.py  test_cfg.py  test_evaluator.py  test_file_collector.py  test_integrated_patch.py  test_memory_agents.py  test_pipeline_failures.py  test_real_patch_verifier.py  test_resilient_llm.py  test_semantic_detection.py  test_student_patches.py  test_verifier.py  test_web_uploads.py
(+1 files in other folders)
