[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vuln-analyzer"
version = "0.1.0"
description = "C/C++ AI vulnerability analysis and patch verification framework MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
]
web = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]
openai = [
    "openai>=1.30,<2",
]
anthropic = [
    "anthropic>=0.26,<1",
]
treesitter = [
    "tree-sitter>=0.22,<1",
]

[project.scripts]
ai-vuln-analyzer = "ai_vuln_analyzer.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_vuln_analyzer.web" = ["templates/*.html"]
